--- a/package.json
+++ b/package.json
@@ -20,10 +20,6 @@
     "body-parser": "1.18.2",
     "express": "4.16.2",
     "morgan": "1.9.0",
-    "request": "2.83.0",
-    "request-promise": "4.2.2"
-  },
-  "devDependencies": {
-    "@types/request-promise": "4.1.40"
+    "request": "2.83.0"
   }
 }
