--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-devtools/server",
-  "version": "1.9.2",
+  "version": "1.10.0-beta.0",
   "description": "",
   "main": "index.js",
   "scripts": {
