--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-devtools/server",
-  "version": "1.10.0",
+  "version": "2.0.0-beta.8",
   "description": "",
   "main": "dist/server.js",
   "scripts": {
