--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-devtools/server",
-  "version": "2.0.0-beta.10",
+  "version": "2.0.0-beta.11",
   "description": "",
   "main": "dist/server.js",
   "scripts": {
@@ -29,8 +29,7 @@
   "devDependencies": {
     "@ngx-devtools/common": "beta",
     "@types/express": "4.16.0",
-    "@types/request": "2.47.1",
-    "@types/yargs": "^11.1.1"
+    "@types/request": "2.47.1"
   },
   "typings": "dist/server.d.ts"
 }
