--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-devtools/server",
-  "version": "2.0.0-beta.11",
+  "version": "2.0.0-beta.12",
   "description": "",
   "main": "dist/server.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "minimatch": "3.0.4"
   },
   "devDependencies": {
-    "@ngx-devtools/common": "beta",
+    "@ngx-devtools/common": "2.0.0-beta.12",
     "@types/express": "4.16.0",
     "@types/request": "2.47.1"
   },
