--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ngx-devtools/server",
-  "version": "2.0.0-beta.12",
+  "version": "2.0.0-beta.13",
   "description": "",
   "main": "dist/server.js",
   "scripts": {
@@ -21,13 +21,13 @@
     "body-parser": "1.18.3",
     "express": "4.16.3",
     "gulp-develop-server": "0.5.2",
-    "morgan": "1.9.0",
-    "request": "2.88.0",
+    "minimatch": "3.0.4",
+    "morgan": "1.9.1",
     "opn": "5.3.0",
-    "minimatch": "3.0.4"
+    "request": "2.88.0"
   },
   "devDependencies": {
-    "@ngx-devtools/common": "2.0.0-beta.12",
+    "@ngx-devtools/common": "2.0.0-beta.13",
     "@types/express": "4.16.0",
     "@types/request": "2.47.1"
   },
